@@ -16,7 +16,7 @@
   <ul>
       <li>
         <a href="/krw-browser/" class="lizard-map-link">
-          <img src="{{ STATIC_URL }}krw_waternet/krw.png" />
+          <img src="{{ STATIC_URL }}lizard_krw/krw.png" />
           <div>KRW gegevens</div>
         </a>
       </li>
